--- a/DesenvolvimentoAPIs/TrabalhoPratico/package.json
+++ b/DesenvolvimentoAPIs/TrabalhoPratico/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Arthur Meireles",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
 }
