--- a/DesenvolvimentoAPIs/TrabalhoPratico/package.json
+++ b/DesenvolvimentoAPIs/TrabalhoPratico/package.json
@@ -8,5 +8,8 @@
   },
   "author": "Arthur Meireles",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "lodash": "^4.17.19"
+  }
 }
