--- a/DesenvolvimentoAPIs/my-bank-api/package.json
+++ b/DesenvolvimentoAPIs/my-bank-api/package.json
@@ -4,8 +4,16 @@
   "description": "Api created for study",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Arthur Meireles",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
