--- a/02.DesenvolvimentoAPIs/05.Desafio/package.json
+++ b/02.DesenvolvimentoAPIs/05.Desafio/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index.js"
   },
   "author": "Arthur Meireles",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "dependencies": {
     "express": "^4.17.1"
