--- a/02.DesenvolvimentoAPIs/05.Desafio/package.json
+++ b/02.DesenvolvimentoAPIs/05.Desafio/package.json
@@ -11,7 +11,10 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
