--- a/03.ReactJS/06.Desafio-guiado-02/package.json
+++ b/03.ReactJS/06.Desafio-guiado-02/package.json
@@ -9,7 +9,8 @@
     "materialize-css": "1.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "shards-react": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
