--- a/react-salary/package.json
+++ b/react-salary/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "react-salario",
+  "name": "react-salary",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "grommet": "^2.14.0",
-    "grommet-icons": "^4.4.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "shards-react": "^1.0.3",
-    "styled-components": "^5.1.1"
+    "@material-ui/core": "^4.11.0",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
