--- a/03.ReactJS/0.Aulas/03.Votes/frontend/package.json
+++ b/03.ReactJS/0.Aulas/03.Votes/frontend/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "frontend",
+  "name": "fer-cap02-aula02",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "materialize-css": "1.0.0",
+    "react": "16.13.1",
+    "react-countup": "^4.3.3",
+    "react-dom": "16.13.1",
     "react-flip-move": "^3.0.4",
     "react-scripts": "3.4.1"
   },
